--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "standard": "^8.3.0",
     "webpack": "^1.13.2",
@@ -18,6 +19,10 @@
   },
   "dependencies": {
     "lodash": "^4.16.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
     "rx-dom": "^7.0.3",
     "stats.js": "^0.16.0",
     "three": "^0.81.2"
