--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^1.0.0",
+    "redux-observable": "^0.12.1",
     "rx-dom": "^7.0.3",
     "stats.js": "^0.16.0",
     "three": "^0.81.2"
