--- a/package.json
+++ b/package.json
@@ -4,7 +4,20 @@
   "version": "1.0.0",
   "name": "opengl-ironhee-study",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "lint": "standard --verbose",
+    "build": "webpack",
+    "add-result-to-git": "git add public/assets/main.js"
+  },
+  "pre-commit": [
+    "lint",
+    "build",
+    "add-result-to-git"
+  ],
+  "standard": {
+    "ignore": [
+      "public/"
+    ]
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
@@ -13,6 +26,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "pre-commit": "^1.1.3",
     "standard": "^8.3.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
@@ -23,8 +37,6 @@
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^1.0.0",
-    "redux-observable": "^0.12.1",
     "rx-dom": "^7.0.3",
     "stats.js": "^0.16.0",
     "three": "^0.81.2"
